--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,53 @@
 .q-stepper__title {
   font-size: 1.125rem !important;
 }
+
+.parallax-header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 150px;
+  background-position: bottom center;
+  background-size: cover;
+  background-attachment: fixed;
+  overflow: hidden;
+  z-index: 0;
+}
+
+.parallax-card {
+  position: relative;
+  overflow: hidden;
+}
+
+.parallax-content {
+  position: relative;
+  z-index: 1;
+  padding-top: 150px;
+}
+
+.parallax-header {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 150px;
+  background-position: bottom center;
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+}
+
+.parallax-header .category-title {
+  display: inline-block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  color: var(--q-dark-brown);
+  background-color: var(--q-soft-orange);
+  padding: 0.25rem 0.5rem;
+  border-radius: 0.25rem;
+  font-size: 2.5rem;
+  font-weight: bolder;
+}
