Hotfix for mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -46,8 +46,19 @@
   z-index: 1;
   color: var(--q-dark-brown);
   background-color: var(--q-soft-orange);
-  padding: 0.25rem 1rem;
+  padding: 0.5rem 1rem;
   border-radius: 0.5rem;
-  font-size: 2.5rem;
   font-weight: bolder;
+}
+
+.q-drawer--right.q-drawer--opened .q-drawer__content {
+  background-color: var(--q-parchment) !important;
+}
+
+.q-drawer--right .q-drawer__content {
+  background-color: var(--q-parchment) !important;
+}
+
+.nicegui-drawer.q-drawer--right {
+  background-color: var(--q-parchment) !important;
 }
