--- a/static/css/font.css
+++ b/static/css/font.css
@@ -1,8 +1,17 @@
-@import url("https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap");
 
-html, body {
-  font-family: "Titillium Web", sans-serif !important;
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+
+body, .q-layout, .q-page {
+  font-family: "Work Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
 }
-.q-layout, .q-page {
-  font-family: inherit !important;
+
+.roboto-slab-title {
+  font-family: "Roboto Slab", serif !important;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+
+
 }
